--- a/go/12-minibattles.html
+++ b/go/12-minibattles.html
@@ -208,7 +208,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cookie-clicker.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cookie-clicker.png">
+                            <img src="https://sudoku-online.github.io/img/cookie-clicker.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -223,7 +223,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/eugenes-life.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/eugenes-life.png">
+                            <img src="https://sudoku-online.github.io/img/eugenes-life.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -238,7 +238,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cyber-cars-punk-racing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cyber-cars-punk-racing.png">
+                            <img src="https://sudoku-online.github.io/img/cyber-cars-punk-racing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -253,7 +253,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/brain-test-tricky-puzzles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/brain-test-tricky-puzzles.png">
+                            <img src="https://sudoku-online.github.io/img/brain-test-tricky-puzzles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -268,7 +268,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/temple-of-boom.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/temple-of-boom.png">
+                            <img src="https://sudoku-online.github.io/img/temple-of-boom.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -283,7 +283,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/funny-shooter-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/funny-shooter-2.png">
+                            <img src="https://sudoku-online.github.io/img/funny-shooter-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -298,7 +298,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/g-switch-3.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/g-switch-3.png">
+                            <img src="https://sudoku-online.github.io/img/g-switch-3.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -313,7 +313,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/happy-room.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/happy-room.png">
+                            <img src="https://sudoku-online.github.io/img/happy-room.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -328,7 +328,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiger-simulator-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiger-simulator-3d.png">
+                            <img src="https://sudoku-online.github.io/img/tiger-simulator-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -343,7 +343,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/riddle-school.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/riddle-school.png">
+                            <img src="https://sudoku-online.github.io/img/riddle-school.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -358,7 +358,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tictactoe.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tictactoe.png">
+                            <img src="https://sudoku-online.github.io/img/tictactoe.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -373,7 +373,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/dreadhead-parkour.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/dreadhead-parkour.png">
+                            <img src="https://sudoku-online.github.io/img/dreadhead-parkour.png">
                             <div class="product-badge">       
                             </div>
                         </div>
