--- a/go/awesome-tanks.html
+++ b/go/awesome-tanks.html
@@ -208,7 +208,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/gobble.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/gobble.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/gobble.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -223,7 +223,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stick-defenders.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stick-defenders.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/stick-defenders.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -238,7 +238,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/slope.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/slope.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/slope.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -253,7 +253,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/vex-7.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/vex-7.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/vex-7.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -268,7 +268,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/duck-life-3-evolution.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/duck-life-3-evolution.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/duck-life-3-evolution.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -283,7 +283,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/raft-wars.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/raft-wars.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/raft-wars.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -298,7 +298,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cyber-cars-punk-racing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cyber-cars-punk-racing.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/cyber-cars-punk-racing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -313,7 +313,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bob-the-robber-4.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bob-the-robber-4.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/bob-the-robber-4.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -328,7 +328,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-climb-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-climb-2.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/stickman-climb-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -343,7 +343,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/wordle-unlimited.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/wordle-unlimited.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/wordle-unlimited.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -358,7 +358,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/jelly-truck.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/jelly-truck.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/jelly-truck.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -373,7 +373,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/escaping-the-prison.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/escaping-the-prison.png">
+                            <img src="https://sudoku-online.github.io/a2/bike-trials-offroad-1//img/escaping-the-prison.png">
                             <div class="product-badge">       
                             </div>
                         </div>
