--- a/index.html
+++ b/index.html
@@ -37,7 +37,33 @@
 
   gtag('config', 'G-KQBRF92VLS');
 </script>
-
+.dropdown {
+    position: relative;
+}
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: white;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+.dropdown-menu li {
+    padding: 5px 10px;
+}
+.dropdown-menu li a {
+    text-decoration: none;
+    color: black;
+}
+.dropdown-menu li a:hover {
+    color: #007bff;
+}
 </head>
 <body>
     
