--- a/term.html
+++ b/term.html
@@ -8,18 +8,28 @@
     <meta name="robots" content="noindex,nofollow" />
       <link rel="icon" href="images/favicon.png" sizes="32x32">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/jquery-comments.css" /> 
-    <link rel="stylesheet" type="text/css" href="css/user.css" /> 
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="css/bootstrap-icons.css" />
-    <!-- Font Awesome icons (free version)-->
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-    <!-- Google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <!-- Place favicon.png in the root directory -->
+    <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon" />
+    <!-- Font Icons css -->
+    <link rel="stylesheet" href="/assets/css/font-icons.css">
+    <!-- plugins css -->
+    <link rel="stylesheet" href="/assets/css/plugins.css">
+    <!-- Main Stylesheet -->
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <!-- Responsive css -->
+    <link rel="stylesheet" href="/assets/css/responsive.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KQBRF92VLS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KQBRF92VLS');
+</script>
 
 
 </head>
