--- a/term.html
+++ b/term.html
@@ -10,7 +10,7 @@
     <title> Terms at OvO Unblocked</title>
         <meta name="robots" content="noindex,nofollow" />
 
-    <link rel="canonical" href="https://ovo-classic.github.io//play.html">
+    <link rel="canonical" href="https://ovo-classic.github.io//term.html">
 <meta name="author" content="OvO Unblocked Team">
 <meta name="publisher" content="OvO Unblocked Team">
 
@@ -103,19 +103,19 @@
             
 
      <h1>Terms and Conditions for Using This Website</h1>
-    <p>Welcome to <strong>shell-shocker.github.io</strong>! By accessing and using this website, you agree to the following terms and conditions. If you don’t agree, please stop using the website.</p>
+    <p>Welcome to <strong>ovo-classic.github.io</strong>! By accessing and using this website, you agree to the following terms and conditions. If you don’t agree, please stop using the website.</p>
 
     <h2>1. Your Agreement to Use This Website</h2>
-    <p>By visiting <strong>shell-shocker.github.io</strong>, you confirm that you accept these terms. You are responsible for ensuring that your use complies with all relevant laws and regulations.</p>
+    <p>By visiting <strong>ovo-classic.github.io</strong>, you confirm that you accept these terms. You are responsible for ensuring that your use complies with all relevant laws and regulations.</p>
 
     <h2>2. External Links and Advertisements Disclaimer</h2>
-    <p>Our website may include links to external sites or advertisements. We are not responsible for the content or reliability of any third-party websites or ads linked from <strong>shell-shocker.github.io</strong>. Access them at your own risk.</p>
+    <p>Our website may include links to external sites or advertisements. We are not responsible for the content or reliability of any third-party websites or ads linked from <strong>ovo-classic.github.io</strong>. Access them at your own risk.</p>
 
     <h2>3. User Responsibility for Website Interactions</h2>
     <p>Any interaction with other users, including comments or community features, should be conducted responsibly. We are not responsible for the behavior or content shared by other users on the site.</p>
 
     <h2>4. General Disclaimer for Information on This Website</h2>
-    <p>The content provided on <strong>shell-shocker.github.io</strong> is for general purposes only. We make no guarantees about the accuracy, completeness, or reliability of the content. You use this website at your own risk.</p>
+    <p>The content provided on <strong>ovo-classic.github.io</strong> is for general purposes only. We make no guarantees about the accuracy, completeness, or reliability of the content. You use this website at your own risk.</p>
 
     <h2>5. Limitation of Liability for Website Usage</h2>
     <p>We will not be held liable for any direct or indirect damages arising from the use or inability to use the website or its content.</p>
@@ -124,7 +124,7 @@
     <p>All content, including text, graphics, and code, is protected by copyright and other intellectual property laws. Do not copy or distribute any materials without permission.</p>
 
     <h2>7. Updates to the Terms and Conditions</h2>
-    <p>We reserve the right to update or modify these terms at any time without notice. Your continued use of <strong>shell-shocker.github.io</strong> after any changes means you agree to the updated terms.</p>
+    <p>We reserve the right to update or modify these terms at any time without notice. Your continued use of <strong>ovo-classic.github.io</strong> after any changes means you agree to the updated terms.</p>
 
     <h2>8. Governing Laws for This Website</h2>
     <p>These terms are governed by the laws of [Your Jurisdiction]. Any legal issues or disputes will be handled according to these laws.</p>
