--- a/term.html
+++ b/term.html
@@ -98,8 +98,7 @@
     </header>
     <!-- HEADER AREA END -->
 
-          <div class="row gamelist-widget"> 
-
+ <div class="container">
             
 
      <h1>Terms and Conditions for Using This Website</h1>
