--- a/policy.html
+++ b/policy.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Terms at OvO Unblocked</title>
+<title>Policy at OvO Unblocked</title>
 
 <meta name="robots" content="Noindex, no-follow" />
 
 
-<link rel="canonical" href="https://ovo-classic.github.io/term.html">
+<link rel="canonical" href="https://ovo-classic.github.io/policy.html">
 <meta name="author" content="OvO Unblocked Team">
 <meta name="publisher" content="OvO Unblocked Team">
 
