--- a/dmca.html
+++ b/dmca.html
@@ -104,10 +104,10 @@
   <h1>Website Terms of Use</h1>
 
     <h2>1. Latest Updates</h2>
-    <p>Welcome to <strong>shell-shocker.github.io</strong>. By accessing and using this website, you agree to comply with these terms. It is your responsibility to periodically review these terms for any updates or changes. Continued use of the website after modifications signifies your acceptance of the updated terms.</p>
+    <p>Welcome to <strong>ovo-classic.github.io</strong>. By accessing and using this website, you agree to comply with these terms. It is your responsibility to periodically review these terms for any updates or changes. Continued use of the website after modifications signifies your acceptance of the updated terms.</p>
 
     <h2>2. DMCA Notice of Alleged Infringement ("Notice")</h2>
-    <p>If you believe that any content on <strong>shell-shocker.github.io</strong> violates your intellectual property rights or constitutes copyright infringement, you may submit a DMCA Notice. The Notice must include the following details:</p>
+    <p>If you believe that any content on <strong>ovo-classic.github.io</strong> violates your intellectual property rights or constitutes copyright infringement, you may submit a DMCA Notice. The Notice must include the following details:</p>
     <ul>
         <li>Your contact information, including name, address, phone number, and email.</li>
         <li>Identification of the copyrighted work claimed to have been infringed.</li>
