--- a/index.html
+++ b/index.html
@@ -841,43 +841,16 @@
           </div>
 
 
-    <!-- FOOTER AREA START -->
-    <footer class="ltn__footer-area  ">
-        <div class="footer-top-area  section-bg-1 plr--5"> 
-        </div>
-        <div class="ltn__copyright-area ltn__copyright-2 section-bg-2  ltn__border-top-2--- plr--5">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6 col-12">
-                        <div class="ltn__copyright-design clearfix">
-                            <p>Ovo-classic.github.io @ <span class="current-year"></span></p>
-                        </div>            
-                    </div>
-                <div style="padding-left: 350px;" class="col-md-6 col-12">
-                        <div class="ltn__copyright-design clearfix">
-                            <p>abbasseoexpert119@gmail.com</p>
-                        </div>            
-                    </div>
-
-                    <!-- <div class="col-md-6 col-12 align-self-center">
-                        <div class="ltn__copyright-menu text-right">
-                            <ul>
-                                <li><a href="#">Terms & Conditions</a></li>
-                                <li><a href="#">Claim</a></li>
-                                <li><a href="#">Privacy & Policy</a></li>
-                            </ul>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- FOOTER AREA END -->
+  <div class="footer-copyright py-4">
+		<div class="container">
+			<a href="/">OvO Unblocked</a>			<span class="dsb-panel">
+				 <a href="/term.html">Term</a>&nbsp;- <a href="/dmca.html">DMCA</a>&nbsp;-  <a href="/policy.html">Policy</a>&nbsp;- <a href="contact.html">Contact</a></span>
+		</div>
+	</div>
 
     
 
 
-</div>
 <!-- Body main wrapper end -->
 
     <!-- preloader area start -->
@@ -895,6 +868,5 @@
     <script src="/assets/js/plugins.js"></script>
     <!-- Main JS -->
     <script src="/assets/js/main.js"></script>
-  
-</body>
+	  </body>
 </html>
