--- a/term.html
+++ b/term.html
@@ -132,8 +132,7 @@
 
           </div>
 
-
-    <!-- FOOTER AREA START -->
+  <!-- FOOTER AREA START -->
     <footer class="ltn__footer-area  ">
         <div class="footer-top-area  section-bg-1 plr--5"> 
         </div>
@@ -142,22 +141,19 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>Ovo-classic.github.io @ <span class="current-year"></span></p>
+                            <p><a href="https://ovo-classic.github.io/">OvO Unblocked</a> @ <span class="current-year"></span></p>
                         </div>            
                     </div>
                 <div style="padding-left: 350px;" class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>abbasseoexpert119@gmail.com</p>
+                           					<span class="dsb-panel">
+				 <a href="/term.html">Term</a>&nbsp;- <a href="/dmca.html">DMCA</a>&nbsp;-  <a href="/policy.html">Policy</a>&nbsp;- <a href="contact.html">Contact</a></span>
+		
                         </div>            
                     </div>
 
                     <!-- <div class="col-md-6 col-12 align-self-center">
                         <div class="ltn__copyright-menu text-right">
-                            <ul>
-                                <li><a href="#">Terms & Conditions</a></li>
-                                <li><a href="#">Claim</a></li>
-                                <li><a href="#">Privacy & Policy</a></li>
-                            </ul>
                         </div>
                     </div> -->
                 </div>
