--- a/play.html
+++ b/play.html
@@ -120,7 +120,7 @@
 
 
 <!-- iframe Game -->
-<div class="container" style="padding-top:20px; padding-bottom:20px"  align="center">
+<div class="container" style="padding-top:20px; padding-bottom:20px" align="Center">
 
     <div class="row">
       <div class="col-md-10">
@@ -130,11 +130,40 @@
 
    </div>
 
+<script>
+var elem = document.getElementById("gm-area");
+function openFullscreen() {
+  if (elem.requestFullscreen) {
+    elem.requestFullscreen();
+  } else if (elem.webkitRequestFullscreen) { /* Safari */
+    elem.webkitRequestFullscreen();
+  } else if (elem.msRequestFullscreen) { /* IE11 */
+    elem.msRequestFullscreen();
+  }
+}
+</script>
 </div>
 
+
+<div class="col-md-2">
+<script type="text/javascript">
+    atOptions = {
+        'key' : '1d23640a72b94b653d6c2ce0bb47d8bf',
+        'format' : 'iframe',
+        'height' : 600,
+        'width' : 160,
+        'params' : {}
+    };
+    document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/1d23640a72b94b653d6c2ce0bb47d8bf/invoke.js"></scr' + 'ipt>');
+</script>
+
+ </div>   
+
+
+
+</div>
 </div>
 <!-- End iframe Game -->
-
 
 
     <div style="padding-top: 60px;" class="row ltn__tab-product-slider-one-active--- slick-arrow-1">
