--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,1 @@
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJf3B3wt0uMUHaI7LWIMn4f1YN_kab1JPNzabLfnQ5kSqZ5g/viewform?embedded=true" width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
