--- a/go/12-minibattles.html
+++ b/go/12-minibattles.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
 <head>
-
-    <meta name="robots" content="noindex, follow" />
-
-    <meta charset="utf-8">
+ <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> OvOclassic.github.io</title>
-   
+ <title> Play MiniBattles Unblocked at OvO Unblocked | OvO Classic</title>
+    <meta name="description" content="Play 12 MiniBattles on OvO Unblocked, a collection of fun and fast-paced multiplayer games. Challenge your friends in various mini-games and see who wins!">
+
+
+<link rel="canonical" href="https://ovo-classic.github.io/go/12-minibattles.html">
+<meta name="author" content="OvO Unblocked Team">
+<meta name="publisher" content="OvO Unblocked Team">
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview: large, max-video-preview:-1" />
+<meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KQBRF92VLS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KQBRF92VLS');
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Place favicon.png in the root directory -->
@@ -20,16 +33,6 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <!-- Responsive css -->
     <link rel="stylesheet" href="/assets/css/responsive.css">
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HL208Z6XL7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HL208Z6XL7');
-</script>
 
 </head>
 
@@ -53,7 +56,7 @@
                     <div class="col">
                         <div class="site-logo-wrap">
                             <div class="site-logo">
-                                <a href="/"><img src="/assets/img/logo.png" alt="Logo"></a>
+                                <a href="/"><img src="/assets/img/logo.png" alt="OvO Unblocked"></a>
                             </div>
                         </div>
                     </div>
@@ -409,8 +412,7 @@ function openFullscreen() {
 
   </div>
 
-
-    <!-- FOOTER AREA START -->
+   <!-- FOOTER AREA START -->
     <footer class="ltn__footer-area  ">
         <div class="footer-top-area  section-bg-1 plr--5"> 
         </div>
@@ -419,18 +421,19 @@ function openFullscreen() {
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>Ovoclassic.github.io @ <span class="current-year"></span></p>
+                            <p><a href="https://ovo-classic.github.io/">OvO Unblocked</a> @ <span class="current-year"></span></p>
                         </div>            
                     </div>
-                
+                <div style="padding-left: 350px;" class="col-md-6 col-12">
+                        <div class="ltn__copyright-design clearfix">
+                           					<span class="dsb-panel">
+				 <a href="/term.html">Term</a>&nbsp;- <a href="/dmca.html">DMCA</a>&nbsp;-  <a href="/policy.html">Policy</a>&nbsp;- <a href="/contact.html">Contact</a></span>
+		
+                        </div>            
+                    </div>
 
                     <!-- <div class="col-md-6 col-12 align-self-center">
                         <div class="ltn__copyright-menu text-right">
-                            <ul>
-                                <li><a href="#">Terms & Conditions</a></li>
-                                <li><a href="#">Claim</a></li>
-                                <li><a href="#">Privacy & Policy</a></li>
-                            </ul>
                         </div>
                     </div> -->
                 </div>
@@ -440,9 +443,6 @@ function openFullscreen() {
     <!-- FOOTER AREA END -->
 
     
-
-  
-
 
 
 </div>
@@ -466,4 +466,3 @@ function openFullscreen() {
   
 </body>
 </html>
-
