--- a/go/10-minutes-till-dawn.html
+++ b/go/10-minutes-till-dawn.html
@@ -120,7 +120,7 @@
 
 
 
-<div align="left" style="padding-top:30px; padding-bottom:20px">
+<div align="center" style="padding-top:30px; padding-bottom:20px">
 <h1>10 Minutes Till Dawn</h1>
 
 </div>    
