--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
   gtag('config', 'G-KQBRF92VLS');
 </script>
 
+
+	
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1350485650271346"
+     crossorigin="anonymous"></script>
+
+
+	
 </head>
 <body>
     
