--- a/play.html
+++ b/play.html
@@ -6,8 +6,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Play OvO Classic Game</title>
-     <meta name="description" content="Play OvO Classic Game! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
+    <title> Play OvO Classic Game | OvO Unblocked</title>
+     <meta name="description" content="Play OvO Classic Game at OvO Unblocked! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
 ">
     <link rel="canonical" href="https://ovo-classic.github.io//play.html">
 <meta name="author" content="OvO Classic Team">
@@ -62,7 +62,7 @@
                     <div class="col">
                         <div class="site-logo-wrap">
                             <div class="site-logo">
-                                <a href="/"><img src="/assets/img/logo.png" alt="OvO Classic game"></a>
+                                <a href="/"><img src="/assets/img/logo.png" alt="OvO Unblocked"></a>
                             </div>
                         </div>
                     </div>
@@ -723,6 +723,66 @@ function openFullscreen() {
         </div>
     </div>
     <!-- PRODUCT AREA END -->
+
+
+ <div class="container">
+ 
+ 
+    <h1>OvO Classic</h1>
+    <p>OvO Classic is a running game where you jump, slide, and dash through different levels. With its simple design and fast gameplay, it’s perfect for players of all ages. Whether you’re new to gaming or an experienced player, OvO Classic promises hours of entertainment.</p>
+
+    <hr>
+
+    <h2>How to Play OvO Classic</h2>
+    <p>Playing OvO Classic is easy to understand. Your goal is to complete levels by avoiding obstacles, solving puzzles, and reaching the finish line. The levels get harder as you progress, so you’ll need to stay sharp and practice your skills.</p>
+    <ol>
+        <li>Open your browsers and visit <a href="https://ovo-classic.github.io" target="_blank">OVO unblocked</a>.</li>
+        <li>Move through levels while dodging traps and obstacles.</li>
+        <li>Collect any bonuses you find to improve your score.</li>
+        <li>Try to finish each level as fast as you can for a high rank.</li>
+    </ol>
+    <p><strong>Tip:</strong> Timing is everything, so practice your jumps and slides to improve.</p>
+
+    <hr>
+
+    <h2>Controls of OvO Classic</h2>
+    <p>The controls in OvO Classic are simple and easy to use:</p>
+    <ul>
+        <li><strong>Left and Right Arrows:</strong> Move left or right.</li>
+        <li><strong>Up Arrow or Spacebar:</strong> Jump over obstacles.</li>
+        <li><strong>Down Arrow:</strong> Slide under barriers.</li>
+        <li><strong>Shift:</strong> Dash forward for speed or to jump farther.</li>
+    </ul>
+    <p>If you’re playing on a phone or tablet, you can use the on-screen buttons for the same controls.</p>
+
+    <hr>
+
+    <h2>Where to Play OvO Classic</h2>
+    <p>You can play OvO Classic for free on our website: <a href="https://ovo-classic.github.io" target="_blank">ovo-classic.github.io</a>. The game works directly in your browser, so you don’t need to download anything. Just open the site and start playing!</p>
+
+    <h3>Why Play on Our Website?</h3>
+    <ul>
+        <li><strong>Easy Access:</strong> No downloads or installations needed.</li>
+        <li><strong>New Features:</strong> We regularly update the game with new levels and improvements.</li>
+        <li><strong>Community:</strong> Connect with other players and share tips.</li>
+        <li><strong>Works Everywhere:</strong> Play on your computer, tablet, or phone.</li>
+    </ul>
+
+
+
+
+
+
+ 
+ 
+ 
+ 
+ </div>
+
+
+
+
+
 
 
   <!-- FOOTER AREA START -->
