--- a/index.html
+++ b/index.html
@@ -112,7 +112,22 @@
     <div class="ltn__product-area ltn__product-gutter pb-70">
         <div class="container">
             <div class="row">
-          
+          <div class="container game-wrapper">
+  <div class="row">
+<div style="text-align:left; font-size: small; margin-bottom: 20px; display: flex; justify-content: center; font-style: italic;">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1350485650271346"
+     crossorigin="anonymous"></script>
+<!-- Header -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1350485650271346"
+     data-ad-slot="8360160183"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div> 
 
 
  <!-- ABOUT US AREA START -->
