--- a/index.html
+++ b/index.html
@@ -849,6 +849,7 @@
          <p>You can enjoy OVO Unblocked directly from <a href="https://ovo-classic.github.io">ovo-classic.github.io</a>. The game is browser-based, so there’s no need to download or install anything. Simply open the website, and you’re ready to play.</p>
           </div>
 
+ 
   <!-- FOOTER AREA START -->
     <footer class="ltn__footer-area  ">
         <div class="footer-top-area  section-bg-1 plr--5"> 
@@ -858,7 +859,7 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p><a href="https://ovo-classic.github.io/">Ovo-classic.github.io</a> @ <span class="current-year"></span></p>
+                            <p><a href="https://ovo-classic.github.io/">OvO Unblocked</a> @ <span class="current-year"></span></p>
                         </div>            
                     </div>
                 <div style="padding-left: 350px;" class="col-md-6 col-12">
@@ -871,7 +872,6 @@
 
                     <!-- <div class="col-md-6 col-12 align-self-center">
                         <div class="ltn__copyright-menu text-right">
-                            
                         </div>
                     </div> -->
                 </div>
