--- a/go/12-minibattles.html
+++ b/go/12-minibattles.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
- <title> Play MiniBattles Unblocked at OvO Unblocked | OvO Classic</title>
+ <title> Play 12 MiniBattles Unblocked at OvO Unblocked | OvO Classic</title>
     <meta name="description" content="Play 12 MiniBattles on OvO Unblocked, a collection of fun and fast-paced multiplayer games. Challenge your friends in various mini-games and see who wins!">
 
 
@@ -116,16 +116,7 @@
 
 
 <div align="center" style="padding-top:30px; padding-bottom:20px">
-<script type="text/javascript">
-    atOptions = {
-        'key' : '08d39ba02e058abcaf93a1c8a5ad826f',
-        'format' : 'iframe',
-        'height' : 90,
-        'width' : 728,
-        'params' : {}
-    };
-    document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/08d39ba02e058abcaf93a1c8a5ad826f/invoke.js"></scr' + 'ipt>');
-</script>
+<h1>12 MiniBattles Unblocked</h1>
 
 </div>    
 
