--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
 
 	
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1350485650271346"
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3770156349158643"
      crossorigin="anonymous"></script>
+
 
 
 	
@@ -116,6 +117,22 @@
   <div class="row">
 
 
+
+
+<div align="center" style="padding-top:30px; padding-bottom:20px">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3770156349158643"
+     crossorigin="anonymous"></script>
+<!-- Main Header -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:800px;height:300px"
+     data-ad-client="ca-pub-3770156349158643"
+     data-ad-slot="5660579305"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>   
+
+	  
 
  <!-- ABOUT US AREA START -->
     <div class="ltn__about-us-area pt-50 pb-120">
