--- a/index.html
+++ b/index.html
@@ -154,7 +154,18 @@
     </div>
     <!-- ABOUT US AREA END -->
 
-            </div>
+    <div align="center" style="padding-top:30px; padding-bottom:20px">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3770156349158643"
+     crossorigin="anonymous"></script>
+<!-- Main Header -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:800px;height:300px"
+     data-ad-client="ca-pub-3770156349158643"
+     data-ad-slot="5660579305"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>   
 
     <div class="row ltn__tab-product-slider-one-active--- slick-arrow-1">
 
