--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
          <p>You can enjoy OVO Unblocked directly from <a href="https://ovo-classic.github.io">ovo-classic.github.io</a>. The game is browser-based, so there’s no need to download or install anything. Simply open the website, and you’re ready to play.</p>
           </div>
 	</div>
- 
+	</div>
   <!-- FOOTER AREA START -->
     <footer class="ltn__footer-area  ">
         <div class="footer-top-area  section-bg-1 plr--5"> 
