--- a/play.html
+++ b/play.html
@@ -39,6 +39,8 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <!-- Responsive css -->
     <link rel="stylesheet" href="/assets/css/responsive.css">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3770156349158643"
+     crossorigin="anonymous"></script>
 
 </head>
 
@@ -120,8 +122,23 @@
 
 
 <!-- iframe Game -->
-<div class="container" style="padding-top:20px; padding-bottom:20px" align="Center">
+<div align="center" style="padding-top:30px; padding-bottom:20px">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3770156349158643"
+     crossorigin="anonymous"></script>
+<!-- Main Header -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:800px;height:300px"
+     data-ad-client="ca-pub-3770156349158643"
+     data-ad-slot="5660579305"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>   
 
+
+
+
+	
     <div class="row">
       <div class="col-md-10">
   <iframe class="gm-iframe" id="gm-area" src="https://ovo-game.github.io/o/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
