--- a/play.html
+++ b/play.html
@@ -136,9 +136,9 @@
 </div>   
 
 
+<!-- iframe Game -->
 
-
-	
+<div class="container" style="padding-top:20px; padding-bottom:20px" align="Center">
     <div class="row">
       <div class="col-md-10">
   <iframe class="gm-iframe" id="gm-area" src="https://ovo-game.github.io/o/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
