--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                         <div class="section-title-area ltn__section-title-2">
     
                             <h1 class="section-title">OvO Unblocked Games</h1>
-<p>OvO Unblocked is an adventure running game. It is accessible from any network, including schools and workplaces, <a href="https://ovounblocked-games.github.io/">OvO Unblocked</a> ensures uninterrupted gameplay. It’s hosted on <a href="https://ovounblocked-games.github.io">ovounblocked-games.github.io</a>, where you can enjoy the game at any time.</p>
-                               <p>OvO Unblocked offers an engaging experience that combines fun with mental and physical challenges, making it perfect for players of all skill levels. Dive into 52 themed stages, navigate through obstacles like death spikes, fire rockets, and teleportation portals, and aim to complete the game with lightning speed. OvO is the ultimate fast-paced platformer that will keep you on your toes!</p>
-                                     <div class="about-author-info d-flex"> 
+OvO Unblocked is an adventure running game that offers seamless access from any network, including schools and workplaces. Its Hosted on <a href="https://ovounblocked-games.github.io">OvO Unblocked</a> it ensures uninterrupted gameplay, letting you dive into the action anytime, anywhere.
+				
+				<div class="about-author-info d-flex"> 
                             <div class="author-name-designation  align-self-center mr-30">
                             <a href="/play.html">
                             <button class="btn theme-btn-1 btn-effect-1 text-uppercase"> Play Now! </button> </a>
